style/app.css
/* ... */
/* fonts */

/*
@font-face {
  font-family: Piaui;
  src: url(../fonts/piaui/piaui-regular.woff) format('woff');
  font-weight: 500;
}
*/

@font-face {
  font-family: Piaui;
  src: url(../fonts/piaui/piaui-bold.woff) format('woff');
  font-weight: 700;
}


/* general */

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  list-style-type: none;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

html {
  width: 100%;
  height: 100%;
  max-height: 100%;
  overflow: hidden;
  background: var(--dark-100);
  font-size: 50%; /* 8px */
}

@media (min-width: 340px) {
  html {
    font-size: 56.25%; /* 9px */
  }
}

@media (min-width: 375px) {
  html {
    font-size: 62.5%; /* 10px */
  }
}

@media (min-width: 1024px) {
  html {
    font-size: 68.75%; /* 11px */
  }
}

@media (min-width: 1440px) {
  html {
    font-size: 75%; /* 12px */
  }
}

body {
  width: 100%;
  height: 100%;
  font-family: Inter, sans-serif;
  line-height: 1.5;
  font-size: 1.8rem;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: var(--light-50);
  overflow: hidden;
}

img {
  display: block;
  max-width: 100%;
}

h1, h2, h3, h4, h5, h6 {
  color: var(--light-100);
  font-family: Piaui, sans-serif;
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 3.2rem;
}

a {
  color: var(--light-100);
  text-decoration: none;
  border-bottom: .1rem solid currentColor;
}

#map a {
  border: initial;
}

p {
  color: var(--light-50);
}

p + p {
  margin-top: calc( 1.8rem * 1.5 );
}

small {
  font-size: 1.4rem;
  color: var(--light-50);
}

small a {
  /* border: none; */
  /* color: inherit */
}

em {
  font-style: normal;
}

section {
  margin-top: 9.6rem;
}

button {
  user-select: none;
}

.app {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
}

.button,
.kicker {
  font-family: Piaui;
  font-weight: 700;
  font-size: 1.8rem;
  line-height: calc( 1.8rem * 1.5 );
  text-transform: uppercase;
  letter-spacing: .2rem;
  margin: 0;
  padding: .8rem 2.4rem;
  height: 6.4rem;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
  border: none;
  white-space: nowrap;
  user-select: none;
  cursor: pointer;
}

.kicker {
  cursor: default;
  user-select: auto;
}

h1.kicker,
h1 .kicker {
  padding-left: 0;
  padding-right: 0;
}

h1 .kicker {
  display: flex;
  justify-content: flex-start;
  color: var(--highlight);
}

.button.filler {
  width: 6.4rem;
  visibility: hidden;
}

.button .material-icons + span {
  margin-left: .8rem;
}

.material-icons {
  font-size: 2.4rem;
  user-select: none;
  pointer-events: none;
}

::-moz-selection {
  color: var(--dark-100);
  background: var(--highlight);
}

::selection {
  color: var(--dark-100);
  background: var(--highlight);
}

.version {
  position: absolute;
  top: 0;
  left: 0;
}

.outline {
  text-shadow:
  -1px -1px 0     var(--dark-100),
   0   -1px 0     var(--dark-100),
   1px -1px 0     var(--dark-100),
   1px  0   0     var(--dark-100),
   1px  1px 0     var(--dark-100),
   0    1px 0     var(--dark-100),
  -1px  1px 0     var(--dark-100),
  -1px  0   0     var(--dark-100),
   0    0   .8rem var(--dark-100);
}



/* accessibility */

.screen-reader {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}



/* cover */

.cover,
.cover figure /*,
.cover img */ {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.cover figure {
  background: #202020;
}

/*
.cover figure img {
  width: 100%;
  height: 50%;
  object-fit: cover;
}
*/

.cover figcaption {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 9.6rem 2.4rem 19.6rem;
  background: linear-gradient(
    var( --dark-75 ),
    var( --dark-0 )
  );
  display: none;
}

.cover figcaption span:last-child {
  color: var(--highlight);
}

.cover figure {
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.cover figure img {
  max-width: initial;
  width: 1920px;
  height: 1920px;
  transform: scale(.5) translate3d( -6%, 6%, 0 );
  animation-direction: alternate;
  animation: move 72s infinite;
  transform-origin: center center;
  animation-timing-function: ease;
}

[data-page]:not([data-page="main"]) .cover figure img {
  animation-play-state: paused;
}

@keyframes move {
  0% {
    transform: scale(.5) translate3d( -12%, 12%, 0 )
  }
  50% {
    transform: scale(.5) translate3d( 12%, -12%, 0 )
  }
  100% {
    transform: scale(.5) translate3d( -12%, 12%, 0 )
  }
}



@media( min-width: 800px ) {

  .cover {
    left: 50%;
  }

  .cover figure img {
    transform: scale(.95) translate3d( -12%, 12%, 0 )
  }

  @keyframes move {
    0% {
      transform: scale(.95) translate3d( -12%, 12%, 0 )
    }
    50% {
      transform: scale(.95) translate3d( 12%, -12%, 0 )
    }
    100% {
      transform: scale(.95) translate3d( -12%, 12%, 0 )
    }
  }

  /*
  .cover figure img {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
  */

  .cover figcaption {
    display: flex;
  }

}


/* main */

.main,
.cover,
.search {
  display: none;
}

[data-page="main"] .main {
  display: block;
}

[data-page="main"] .cover,
[data-page="main"] .search {
  display: flex;
}

.main {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  max-height: 100%;
  padding: 0 2.4rem 15.2rem;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

.main::before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  display: flex;
  height: 100vh;
  width: 100%;
  z-index: 1;
  background: linear-gradient(
    var( --dark-0 ),
    var( --dark-100 )
  );
}
/* ... */

